Fixed all erros and wrapped up

--- a/client/src/pages/Reports.css
+++ b/client/src/pages/Reports.css
@@ -53,11 +53,46 @@
   }
 }
 
+
+.report-btn {
+  padding: 10px 15px;
+  font-family: 'Inter', sans-serif;
+
+  font-size: 0.875rem;
+  font-weight: 500;
+  border: none;
+  border-radius: 0.375rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  margin-left: 0.5rem;
+  background-color: #f4f7fa;
+  color: rgb(0, 0, 0);
+  flex-direction: unset;
+  border: 1px solid #c4c8cd;
+}
+
+.report-btn:hover {
+  background-color: #a2adb8;
+  animation: initial;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
+  animation-name: fadeIn;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 /* --- Month Picker --- */
 
 .month-selector {
   margin-bottom: 2rem;
   display: flex;
+  flex-direction: row;
   align-items: center;
   gap: 0.75rem;
   margin-top: 20px;
@@ -71,9 +106,11 @@
 
 /* Custom styles for the react-datepicker input */
 .date-picker-container {
-  position: relative;
-  max-width: 300px;
-  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* or space-between / flex-end as needed */
+  gap: 32rem; /* spacing between date picker and button */
+  margin-bottom: 1rem;
 }
 
 .date-picker-input {
